@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2022 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -21,6 +21,7 @@ import com.sun.xml.ws.spi.db.XMLBridge;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.UUID;
 import jakarta.activation.DataHandler;
 import javax.xml.transform.Source;
@@ -67,11 +68,7 @@ abstract class MessageFiller {
             this.param = param;
             this.getter = getter;
             mimeType = param.getBinding().getMimeType();
-            try {
-                contentIdPart = URLEncoder.encode(param.getPartName(), "UTF-8")+'=';
-            } catch (UnsupportedEncodingException e) {
-                throw new WebServiceException(e);
-            }
+            contentIdPart = URLEncoder.encode(param.getPartName(), StandardCharsets.UTF_8)+'=';
         }
         
         /**
